--- a/android/build.gradle
+++ b/android/build.gradle
@@ -64,6 +64,9 @@ android {
         implementation "androidx.annotation:annotation:$annotationVersion"
         implementation "androidx.work:work-runtime:$workVersion"
     }
+    
+    namespace 'com.betterplayer.betterplayer'
+
 }
 
 dependencies {
