--- a/android/build.gradle
+++ b/android/build.gradle
@@ -65,7 +65,7 @@ android {
         implementation "androidx.work:work-runtime:$workVersion"
     }
     
-    namespace 'com.betterplayer.betterplayer'
+    namespace 'com.jhomlala.better_player'
 
 }
 
